Correct spelling mistake.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Guilty Dog Productios</title>
+		<title>Guilty Dog Productions</title>
 	</head>
 	<body>
 		<nav>
