Update to use default.html

--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Guilty Dog Productions</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">		
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Claire!</h1>
-				<p>I make video games, and have a passion for <em>Virtual Reality</em>. <a href="/about">Read more about my stuff...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:claire@guiltydog.co.uk">email</a></li>
-        		<li><a href="https://guiltydog.co.uk">guiltydog.co.uk</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Claire Rogers, Guilty Dog Productions
+---
+<div class="blurb">
+	<h1>Hi there, I'm Claire Rogers!</h1>
+	<p>I'm a game developer with a passion for <em>Virtual Reality</em>. <a href="/about">Read more about my work...</a></p>
+</div><!-- /.blurb -->
