--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 ---
 layout: default
-title: Claire Rogers, Guilty Dog Productions
+title: Guilty Dog Games.
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Claire Rogers!</h1>
-	<p>I'm a game developer with a passion for <em>Virtual Reality</em>. <a href="/about">Read more about my work...</a></p>
+	<h1>Hi there, I'm Claire</h1>
+	<p>I'm an Indie / ex AAA game developer with a passion for <em>Virtual Reality</em>. I couldn't get a job doing what I wanted to 
+	   do without moving across the country or even the world, so I walked away to do things my own way.
+	<a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
