Air Hockey Arcade blog post.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Guilty Dog Games.
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Claire</h1>
-	<p>I'm an Indie / ex AAA game developer with a passion for <em>Virtual Reality</em>. I couldn't get a job doing what I wanted to do without moving across the country or even the world, so I walked away to try to do things my own way. <a href="/about">Read more about me...</a></p>
+	<h1>Games by Guilty Dog Productions.</h1>
+	<p>I'm Claire, an Indie / ex AAA game developer with a passion for <em>Virtual Reality</em>. I couldn't get a job doing what I wanted to do without moving across the country or even the world, so I walked away to try to do things my own way. <a href="/about">Read more about me...</a></p>
 </div><!-- /.blurb -->
